@startuml
skinparam classAttributeIconSize 0
skinparam monochrome false
skinparam packageStyle rectangle
skinparam shadowing false
skinparam linetype polyline
skinparam linetype orto


class SystemUser {
    name
    email
    password
    phone
}

class CollaboratorRepository {
    - ArrayList collaboratorList

}


class Repositories {
    - collaboratorRepository
    - vehicleRepository
    - skillRepository
    - jobRepository
    - EntryRepository
    - Repositories()
    + getInstance()
    + getCollaboratorRepository()
    + getVehicleRepository()
    + getSkillRepository()
    + getJobRepository()
    + getEntryRepository()

}
class SystemUser {
    name
    email
    password
    phone

}
class AssignVehicleController{
-VehicleRepository
+getEntryRepository()
+getVehicleRepositoryRepository()
+getEntryList()
+getVehicleList()

}

class AssignVehiclessUI{

}



class VehicleRepository {
    - ArrayList VehicleList
    + getVehicleRepository()
    + getVehicle()
    + assignVehicle()
    - vehicleIsValid()
    - isValidVehicleName()
}

class Vehicle {
      name
      phone
      birthdate
      admissionDate
      address
      idDocumentType
      idDocumentNumber
      status
}
Repositories -->"1" CollaboratorRepository
Repositories -->"1" VehicleRepository
Vehicle "*" <-- "1" VehicleRepository : has
Entry "*" <-- "1" EntryRepository : has
Vehicle "1..*" - "1" Entry: is atributed to >
SystemUser <|-- Entry
AssignVehicleUI .> AssignVehicleController
AssignVehicleController ..> Repositories : repositories

@enduml
